remove extraneous word

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,8 @@
                 direkt über <a href="https://de.wikipedia.org/wiki/Near_Field_Communication">NFC</a> an den Arzt
                 übertragen werden.</p>
             <p class="text-secondary">Derzeit liegt der Fokus auf Testosteronmangelerkrankungen, insbesondere in
-                Form einer Unterstützung für den <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC155679/">The
-                    Aging Males' Symptoms (AMS) Fragebogen</a>. Unterstützung für weitere Krankheitsbilder sowie
+                Form einer Unterstützung für den <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC155679/">Aging
+                    Males' Symptoms (AMS) Fragebogen</a>. Unterstützung für weitere Krankheitsbilder sowie
                 Darstellung von Untersuchungsergebnissen sind geplant.</p>
             <p class="text-secondary">Durch absichtlichen Verzicht auf Tracking und Auswertung von Nutzungsdaten
                 behalten Sie die Kontrolle über Ihre Daten. Das heißt natürlich auch, dass wir auf Feedback und
