--- a/templates/index.html
+++ b/templates/index.html
@@ -47,12 +47,13 @@
         <div class="text-left">
             <p class="text-secondary"><strong>urocheck </strong>erlaubt es Ihnen, bereits vor dem Arztbesuch für
                 eine Diagnose notwendige Fragen in Ruhe zu beantworten. In der Arztpraxis können diese Daten dann
-                direkt über <a href="https://de.wikipedia.org/wiki/Near_Field_Communication">NFC</a> an den Arzt
-                übertragen werden.</p>
+                direkt über <a class="text-light" href="https://de.wikipedia.org/wiki/Near_Field_Communication">NFC</a>
+                an den Arzt übertragen werden.</p>
             <p class="text-secondary">Derzeit liegt der Fokus auf Testosteronmangelerkrankungen, insbesondere in
-                Form einer Unterstützung für den <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC155679/">Aging
-                    Males' Symptoms (AMS) Fragebogen</a>. Unterstützung für weitere Krankheitsbilder sowie
-                Darstellung von Untersuchungsergebnissen sind geplant.</p>
+                Form einer Unterstützung für den <a class="text-light"
+                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC155679/">Aging Males' Symptoms (AMS)
+                    Fragebogen</a>. Unterstützung für weitere Krankheitsbilder sowie Darstellung von
+                Untersuchungsergebnissen sind geplant.</p>
             <p class="text-secondary">Durch absichtlichen Verzicht auf Tracking und Auswertung von Nutzungsdaten
                 behalten Sie die Kontrolle über Ihre Daten. Das heißt natürlich auch, dass wir auf Feedback und
                 Fehlerberichte (bestenfalls im Play Store) angewiesen sind.</p>
